kubernetes/webapp/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jambonzwebapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: ui
      http:
        paths:
        - backend:
            serviceName: webapp
            servicePort: 3001
          path: /
          pathType: Prefix
